<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_criptocurrencies"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/title_criptocurrencies" />

    <item
        android:id="@+id/navigation_ads"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_ads" />

    <item
        android:id="@+id/navigation_code"
        android:icon="@drawable/ic_code_black_24dp"
        android:title="@string/title_code" />

    <!-- TODO PASO 1: 25/07/2018: Descomentar para agregar Item Ninja -->
    <item
        android:id="@+id/navigation_taller_ninja"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Taller Ninja" />

</menu>
