<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpleBackground"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/dialog_ninja"
        android:textColor="@color/colorLightGrayTextColor"
        android:background="@color/dark"
        android:padding="10dp"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:srcCompat="@drawable/ninja_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/purpleBackground"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@color/greenPrimary"
            android:clickable="true"
            android:text="@string/aceptar_dialog_ninja"
            android:textColor="@color/purpleBackground"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@color/greenPrimary"
            android:clickable="true"
            android:text="@string/cancelar_dialog_ninja"
            android:textColor="@color/purpleBackground"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>