<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.AboutAppActivity"
    tools:showIn="@layout/activity_about_app"
    android:background="@color/purpleBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/principal_linear_layout_ninja_dialog">


        <TextView
            android:id="@+id/txt_app_version"
            style="@style/code_text_lines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_ninja_dialog_text_box"
            android:text="@string/display_app_version"
            android:layout_marginBottom="0dp"
            android:background="@color/colorDarkGrayBackground"
            android:padding="@dimen/paddding_ninja_dialog_text_box"
            android:textSize="@dimen/text_size_ninja_dialog_text_box" />

        <TextView
            android:id="@+id/txt_version_name"
            style="@style/code_text_lines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_ninja_dialog_text_box"
            android:layout_marginBottom="0dp"
            android:text="@string/display_version_name"
            android:background="@color/colorDarkGrayBackground"
            android:padding="@dimen/paddding_ninja_dialog_text_box"
            android:textSize="@dimen/text_size_ninja_dialog_text_box" />

        <TextView
            android:id="@+id/txt_dialog_ninja"
            style="@style/code_text_lines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_ninja_dialog_text_box"
            android:layout_marginBottom="0dp"
            android:text="@string/dialog_ninja"
            android:background="@color/colorDarkGrayBackground"
            android:padding="@dimen/paddding_ninja_dialog_text_box"
            android:textSize="@dimen/text_size_ninja_dialog_text_box" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/purpleBackground"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_ninja_dialog_text_box"
            android:id="@+id/button_group_ninja_dialog_linear_layout">

            <Button
                android:id="@+id/btn_aceptar_ninja"
                android:layout_width="@dimen/button_ninja_width"
                android:layout_height="@dimen/button_ninja_height"
                android:background="@color/greenPrimary"
                android:clickable="true"
                android:text="@string/aceptar_dialog_ninja"
                android:textColor="@color/purpleBackground"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

