<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purpleBackground">

    <LinearLayout android:id="@+id/titleTicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_code_text_box"
        android:background="@color/greenPrimary"
        android:padding="@dimen/padding_detail_items">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:layout_weight="2"
            android:contentDescription="@string/zero_decimal"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/greenPrimary">

            <TextView
                android:id="@+id/nameTickerDetail"
                style="@style/detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ticker_detail_name"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/symbolTickerDetail"
                style="@style/detail_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/ticker_detail_symbol"
                android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                android:textColor="@color/purpleBackground"
                android:textSize="18dp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoPriceUsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:layout_margin="@dimen/margin_code_text_box"
        android:padding="@dimen/padding_detail_items">

        <TextView
            android:id="@+id/lblUsdPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ticker_detail_priceUsd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            style="@style/detail_item"/>

        <TextView
            android:id="@+id/valueUsdPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/zero_decimal"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="RtlCompat"
            style="@style/detail_item"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoPriceBtc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:layout_margin="@dimen/margin_code_text_box"
        android:padding="@dimen/padding_detail_items">

        <TextView
            android:id="@+id/lblBtcPrice"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ticker_detail_priceBtc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            style="@style/detail_item" />

        <TextView
            android:id="@+id/valueBtcPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/zero_decimal"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="RtlCompat"
            style="@style/detail_item"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoMarketCapUsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:layout_margin="@dimen/margin_code_text_box"
        android:padding="@dimen/padding_detail_items">

        <TextView
            android:id="@+id/lblCapMarketUsd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ticker_detail_marketCapUsd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            style="@style/detail_item" />

        <TextView
            android:id="@+id/valueMarketCapUsd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/zero_decimal"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="RtlCompat"
            style="@style/detail_item"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoTotalSuppy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:layout_margin="@dimen/margin_code_text_box"
        android:padding="@dimen/padding_detail_items">

        <TextView
            android:id="@+id/lblTotalSupply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:text="@string/ticker_detail_totalSupply"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            style="@style/detail_item" />

        <TextView
            android:id="@+id/valueTotalSupply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/zero_decimal"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="RtlCompat"
            style="@style/detail_item"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoVolOp24Hs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:layout_margin="@dimen/margin_code_text_box"
        android:padding="@dimen/padding_detail_items">

        <TextView
            android:id="@+id/lblVol24Hs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ticker_detail_volume24hs"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            style="@style/detail_item" />

        <TextView
            android:id="@+id/valueVol24hs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/zero_decimal"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="RtlCompat"
            style="@style/detail_item"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoMaxSuply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenPrimary"
        android:layout_margin="@dimen/margin_code_text_box"
        android:padding="@dimen/padding_detail_items">

        <TextView
            android:id="@+id/lblMaxSupply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/ticker_detail_maxSupply"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            style="@style/detail_item"/>

        <TextView
            android:id="@+id/valueMaxSupply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/zero_decimal"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:ignore="RtlCompat"
            style="@style/detail_item"/>

    </LinearLayout>
</LinearLayout>
